# HDMap

./: CMakeLists.txt  XMLTest.cpp  package.xml  talker.cpp
data/: test.xml
doc/: HDMap接口文档.md
include/: JunctionMSG.h  LocalMap.h  LocalMapRequest.h  LocalMapResponse.h  Location.h  Pose2DArray.h  RoadMSG.h  common.h  msg_signal.h  msg_signal_list.h  nox_location.h
include/Common/: kdtree.hpp  pointer_typedef.h
include/HDMap/: msg_map_cmd.h  msg_route_info.h  msg_route_region.h  msg_signal.h  msg_signal_list.h  srv_map_cmd.h  srv_map_cmdRequest.h  srv_map_cmdResponse.h  srv_map_data.h  srv_map_dataRequest.h  srv_map_dataResponse.h  srv_route.h  srv_routeRequest.h  srv_routeResponse.h
include/Interface/: IGeometry.h  IView.h  IXML.h
include/Math/: Bezier.h  CubicFunction.h  Curve.h  Line.h
include/Tool/: Client.h  Planner.h  Resource.h  Route.h  Sender.h  polygonScan.h
include/Type/: Angle.h  Coor.h  Junction.h  Lane.h  LaneLink.h  LaneSection.h  Map.h  Pose.h  Road.h  RoadLink.h  Signal.h  Vector2d.h
include/nox_msg/: Location.h  nox_location.h
launch/: hdmap.launch  map_agent.launch  map_cmd.launch  map_fake_cmd.launch  map_rviz.launch  map_service.launch  map_view.launch  map_view_local_view.launch  view_detect_region.rviz  view_detect_region_relative.rviz  view_local.rviz  view_world.rviz
map/: map.xml
msg/: JunctionMSG.msg  Pose2DArray.msg  RoadMSG.msg  msg_connection.msg  msg_junction.msg  msg_lane.msg  msg_map_cmd.msg  msg_road.msg  msg_route_info.msg  msg_scene.msg  msg_section.msg  msg_signal.msg  msg_signal_list.msg
res/: map-limit.xml  map.xml
res/car_texture/: car.dae
src/: FakeMapCmd.cpp  MapAgent.cpp  MapCommand.cpp  MapGenerator.cpp  MapGenerator_for_show.cpp  MapService.cpp  MapTest.cpp  MapViewer.cpp  Sender.cpp  Sender.h  SyncQueue.hpp  main.cpp
src/Interface/: IGeometry.h  IView.h  IXML.h
src/Math/: Bezier.cpp  Bezier.h  CubicFunction.cpp  CubicFunction.h  Curve.cpp  Curve.h  Line.cpp  Line.h
src/Tool/: Client.cpp  DataProcess.cpp  LocalMap.cpp  Planner.cpp  Planner.h  Republish.cpp  Resource.cpp  Route.cpp  Routing.cpp  Routing.h  Sender.cpp  Sender.h  ViewDetectRegion.cpp  ViewGPS.cpp
src/Type/: Angle.cpp  Angle.h  Coor.cpp  CubicPoly.cpp  CubicPoly.h  Curve.h  HDMap.cpp  HDMap.h  Junction.cpp  Junction.h  Lane.cpp  Lane.h  LaneLink.cpp  LaneLink.h  LaneSection.cpp  LaneSection.h  Lanes.cpp  Lanes.h  Line.cpp  Line.h  Map.cpp  Map.h  Pose.cpp  Pose.h  Road.cpp  Road.h  RoadLink.cpp  RoadLink.h  Signal.cpp  Signal.h  Vector2d.cpp  Vector2d.h  common.h
srv/: LocalMap.srv  srv_map_cmd.srv  srv_map_data.srv  srv_route.srv
